--- a/packages/base/CHANGELOG
+++ b/packages/base/CHANGELOG
@@ -1,6 +1,10 @@
 0.17.0.0
 --------
 
+    * initial support of (C)Int elements
+    
+    * improved matrix extraction using vectors of indexes
+
     * old compatibility modules removed
 
     * added "unitary" and "pairwiseD2"
