--- a/packages/base/CHANGELOG
+++ b/packages/base/CHANGELOG
@@ -1,24 +1,32 @@
 0.17.0.0
 --------
 
-    * improved matrix extraction (??) and rectangular matrix slices without data copy
+    * eigSH, chol, and other functions that work with Hermitian or symmetric matrices
+      now take a special "Sym" argument that can be created by means of "sym"
+      or "mTm". The unchecked versions of those functions have been removed and we
+      use "trustSym" to create the Sym type when the matrix is known to be Hermitian/symmetric.
 
-    * basic support of Int32 and Int64 elements
-    
+    * Improved matrix extraction (??) and rectangular matrix slices without data copy
+
+    * Basic support of Int32 and Int64 elements
+
     * remap, more general cond, sortIndex
 
-    * experimental support of type safe modular arithmetic, including linear
-      systems and lu factorization
-    
-    * elementary row operations and inplace matrix slice products in the ST monad
+    * Experimental support of type safe modular arithmetic, including linear
+      system solver and LU factorization
+
+    * Elementary row operations and inplace matrix slice products in the ST monad
 
     * Improved development tools.
 
-    * old compatibility modules removed, simpler organization of internal modules
+    * Old compatibility modules removed, simpler organization of internal modules
 
     * unitary, pairwiseD2, tr'
 
-    * ldlPacked, ldlSolve
+    * ldlPacked, ldlSolve for indefinite symmetric systems (apparently not faster
+      than the general solver based on the LU)
+
+    * LU, LDL, and QR types for these compact decompositions.
 
 0.16.1.0
 --------
