changelog and thanks

--- a/packages/base/CHANGELOG
+++ b/packages/base/CHANGELOG
@@ -1,3 +1,10 @@
+0.18.0.0
+--------
+
+    * meanCov and gaussianSample use Herm type.
+
+    * New functions and instances in the Static module.
+
 0.17.0.0
 --------
 
